@@ -1,5 +1,11 @@
 2012-02-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/gen.c,
+	  src/z80/peeph-z80.def:
+	  Minor addition improvement.
+
+2012-02-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/z80/gen.c:
 	  Use bit instruction for & in jump condition.
 	* src/z80/peep.c,
